# Algebraeon-Python

./: .gitignore  CHANGELOG.md  CLA  README.md
.github/workflows/: CI.yml  cla.yml  guide.yml  maturin.yml  rust.yml
algebraeon/: Cargo.toml  pyproject.toml  test.py  tmp.py
algebraeon/src/: complex_algebraic.rs  impl_macros.rs  integer.rs  integer_factored.rs  integer_modulo.rs  integer_polynomial.rs  integer_polynomial_factored.rs  lib.rs  natural.rs  natural_factored.rs  natural_polynomial.rs  padic_algebraic.rs  rational.rs  rational_polynomial.rs  real_algebraic.rs
examples/: Cargo.toml
examples/src/: main.rs
guide/: book.toml
guide/book/: 404.html  index.html  number_types.html  print.html  searcher-c2a407aa.js  searchindex-e93816d7.js  toc-486f5037.js  toc.html
guide/src/: SUMMARY.md  algebraic.md  factoring.md  introduction.md  meta.md  number_types.md  numbers.md  polynomials.md  tests.md
run_tests/src/: main.rs
signatures/version1/: cla.json
tests/: casting.py  construct.py  int_factor..py  int_mod_ops.py  int_ops.py  nat_factor.py  nat_ops.py  rat_ops.py  sets.py
