[package]
name = "algebraeon-python"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "algebraeon"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features = [
    "extension-module",
    "num-bigint",
    "either",
] }
algebraeon = "0.0.14"
num-bigint = "0.4.6"

[package.metadata.maturin]
generate-typed-stubs = true
